# loom-tui

./: .gitignore  Cargo.toml  flake.nix
.claude/agents/: architecture-agent.md  code-reviewer.md  code-simplifier.md  comment-analyzer.md  dotfiles-agent.md  pr-test-analyzer.md  security-agent.md  silent-failure-hunter.md  skill-content-reviewer.md  type-design-analyzer.md
.claude/commands/: finalize.md  review-pr.md
.claude/hooks/: send_event.sh
.claude/plans/: 2026-02-11-loom-tui.md  2026-02-15-codebase-fixes.md
.claude/rules/: architecture.md  rust-patterns.md
.claude/skills/: architecture-tech-lead
.claude/specs/2026-02-11-loom-tui/: brainstorm.md  spec.md
.claude/state/: active_task_graph.json.bak
docs/plans/: 2026-02-15-agent-prompt-popup-session-refactor-design.md
hooks/: send_event.sh
reviews/: codebase-review-main.md  pr-6-ui-enhancements.md
src/: error.rs  lib.rs  main.rs  paths.rs  tmux.rs
src/app/: mod.rs  navigation.rs  state.rs  update.rs
src/event/: mod.rs
src/hook_install/: mod.rs
src/model/: agent.rs  hook_event.rs  ids.rs  mod.rs  serde_utils.rs  session.rs  task.rs  theme.rs  transcript_event.rs
src/session/: mod.rs
src/view/: agent_detail.rs  dashboard.rs  mod.rs  session_detail.rs  sessions.rs  token_cost_dashboard.rs
src/view/components/: banner.rs  (+18 more)
src/watcher/: mod.rs  parsers.rs  tail.rs
tests/: main_loop_tests.rs  model_tests.rs  navigation_tests.rs  session_tests.rs  update_tests.rs  view_tests.rs  watcher_tests.rs
tests/fixtures/: active_task_graph.json  agent-a04.jsonl  events.jsonl  session_archive.json
(+1 files in other folders)
