[package]
name = "loom-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
tokio = { version = "1.44", features = ["full"] }
notify = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3.13"
